OMG it works !
Still missing a lot of features but at least it works